wrap attribute values to prevent overflowing

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -824,6 +824,7 @@ span.ErrorLabel {
 	display: block;
 	padding: 10px 10px 10px 220px;
 	font-weight: bold;
+	overflow-wrap: break-word;
 }
 
 .EditAttrVal textarea,
